# mirte-ros-packages

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Packages  README.md  Release  local.yaml  mypy-baseline.txt  mypy.ini  ros-humble-astra-camera-msgs-dbgsym_2-2025.06.04.10.54_amd64.ddeb  ros-humble-astra-camera-msgs-dbgsym_2-2025.06.04.10.55_arm64.ddeb  ros-humble-astra-camera-msgs_2-2025.06.04.10.54_amd64-2025-06-04T10:54:05Z.build  ros-humble-astra-camera-msgs_2-2025.06.04.10.54_amd64.build  ros-humble-astra-camera-msgs_2-2025.06.04.10.54_amd64.buildinfo  ros-humble-astra-camera-msgs_2-2025.06.04.10.54_amd64.changes  ros-humble-astra-camera-msgs_2-2025.06.04.10.54_amd64.deb  ros-humble-astra-camera-msgs_2-2025.06.04.10.55_arm64-2025-06-04T10:55:56Z.build  ros-humble-astra-camera-msgs_2-2025.06.04.10.55_arm64.build  ros-humble-astra-camera-msgs_2-2025.06.04.10.55_arm64.buildinfo  ros-humble-astra-camera-msgs_2-2025.06.04.10.55_arm64.changes  ros-humble-astra-camera-msgs_2-2025.06.04.10.55_arm64.deb  ros-humble-astra-camera_2-2025.06.04.10.55_amd64-2025-06-04T10:55:52Z.build  ros-humble-astra-camera_2-2025.06.04.10.55_amd64.build  ros-humble-astra-camera_2-2025.06.04.10.55_amd64.buildinfo  ros-humble-astra-camera_2-2025.06.04.10.55_amd64.changes  ros-humble-astra-camera_2-2025.06.04.10.55_amd64.deb  ros-humble-astra-camera_2-2025.06.04.10.58_arm64-2025-06-04T10:58:06Z.build  ros-humble-astra-camera_2-2025.06.04.10.58_arm64.build  ros-humble-astra-camera_2-2025.06.04.10.58_arm64.buildinfo  ros-humble-astra-camera_2-2025.06.04.10.58_arm64.changes  ros-humble-astra-camera_2-2025.06.04.10.58_arm64.deb  ros-humble-libuvc-dbgsym_2-2025.06.04.10.55_amd64.ddeb  ros-humble-libuvc-dbgsym_2-2025.06.04.10.57_arm64.ddeb  ros-humble-libuvc_2-2025.06.04.10.55_amd64-2025-06-04T10:55:12Z.build  ros-humble-libuvc_2-2025.06.04.10.55_amd64.build  ros-humble-libuvc_2-2025.06.04.10.55_amd64.buildinfo  ros-humble-libuvc_2-2025.06.04.10.55_amd64.changes  ros-humble-libuvc_2-2025.06.04.10.55_amd64.deb  ros-humble-libuvc_2-2025.06.04.10.57_arm64-2025-06-04T10:57:15Z.build  ros-humble-libuvc_2-2025.06.04.10.57_arm64.build  (+162 more)
.github/workflows/: catkin-lint.yml  cpp-check.yml  hinting.yaml  pylint.yml  python-check.yml  ros-build.yml
mirte-zenoh-setup/: CMakeLists.txt  package.xml
mirte-zenoh-setup/config/: router_robot_config.json5  session_config.json5
mirte-zenoh-setup/env_hook/: mirte_zenoh_setup.sh.in
mirte_bringup/: CMakeLists.txt  package.xml
mirte_bringup/launch/: base.launch  camera.launch.py  gripper_camera.launch.py  minimal.launch.py  minimal.launch.xml  minimal_master.launch  minimal_master.launch.py  minimal_master.launch.xml  minimal_master_multirobot.launch.py  ros2_control.launch.py  state_publishers.launch.py
mirte_bringup/telemetrix_config/: mirte_master_config.yaml  mirte_user_config.yaml
mirte_control/: CMakeLists.txt  package.xml
mirte_control/config/: control_master.yaml
mirte_control/include/: my_robot_hw_interface.h
mirte_control/mirte_base_control/: CMakeLists.txt  package.xml
mirte_control/mirte_master_arm_control/: CMakeLists.txt  README.md  mirte_master_arm_control.xml  package.xml
mirte_control/mirte_master_arm_control/bringup/config/: control_master.yaml  mirte_base_control.yaml  mirte_master_arm_control.yaml
mirte_control/mirte_master_arm_control/bringup/launch/: mirte_master_arm_control.launch.py
mirte_control/mirte_master_arm_control/bringup/urdf/: arm.urdf.xacro
mirte_control/mirte_master_arm_control/hardware/: mirte_master_arm_control.cpp  params.cpp
mirte_control/mirte_master_arm_control/hardware/include/: mirte_master_arm_control.hpp
mirte_control/mirte_master_arm_control/include/ros_control_boilerplate/: generic_hw_interface.h
mirte_control/mirte_master_arm_control/old/include/ros_control_boilerplate/tools/: joystick_manual_control.h
mirte_control/mirte_master_arm_control/old/rrbot_control/src/: rrbot_hw_main.cpp
mirte_control/mirte_master_arm_control/old/src/: generic_hw_control_loop.cpp
mirte_control/mirte_master_arm_control/old/src/tools/: controller_to_csv.cpp  controller_to_csv_main.cpp
mirte_control/mirte_master_arm_control/rrbot_control/config/: rrbot_controllers.yaml
mirte_control/mirte_master_arm_control/src/tools/: csv_to_controller_main.cpp  test_trajectory.cpp
mirte_control/mirte_master_base_control/: package.xml
mirte_control/mirte_pioneer_control/: package.xml
mirte_control/mirte_pioneer_control/bringup/config/: mirte_diff_drive_controllers.yaml
mirte_control/mirte_pioneer_control/bringup/launch/: mirte.launch.py
mirte_control/mirte_pioneer_control/hardware/: mirte_pioneer_system.cpp
mirte_control/ros_control_boilerplate/: CMakeLists.txt  package.xml
mirte_control_master/: CMakeLists.txt  package.xml
mirte_control_master/config/: control.yaml  my_robot_control.yaml
mirte_control_master/include/: my_robot_hw_interface.h
mirte_control_master/launch/: control.launch
mirte_control_master/scripts/: mock.py
mirte_control_master/src/: my_robot_base.cpp
mirte_description/: CMakeLists.txt
mirte_description/mirte_master_description/: package.xml
mirte_description/mirte_pioneer_description/: package.xml
mirte_description/urdf/: mirte_arm.urdf
mirte_fastdds_discovery_setup/: CMakeLists.txt  README.md  package.xml
mirte_fastdds_discovery_setup/config/: super_client_config.xml  super_client_config.xml.in
mirte_fastdds_discovery_setup/env_hook/: mirte_fastdds_discovery_setup.sh.in
mirte_master/: CMakeLists.txt  package.xml
mirte_master_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mirte_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mirte_msgs/: CMakeLists.txt  package.xml
mirte_telemetrix/: CMakeLists.txt  package.xml
mirte_telemetrix_cpp/: .clang-format  CMakeLists.txt  package.xml
mirte_teleop/: package.xml
mirte_test/: package.xml  setup.cfg  setup.py
mirte_zenoh_setup/: README.md  package.xml
mirte_zenoh_setup/config/: router_client_config.json5.in  router_robot_config.json5
mirte_zenoh_setup/env_hook/: mirte_zenoh_setup.sh.in
(+133 files in other folders)
