<?xml version="1.0"?>
<package format="3">
  <name>mirte_zenoh_setup</name>
  <version>0.0.0</version>
  <description>The mirte_zenoh_setup package</description>
  <maintainer email="m.klomp@tudelft.nl">Martin Klomp</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rmw_zenoh_cpp</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
