<?xml version="1.0"?>
<package format="3">
  <name>mirte_master_arm_control</name>
  <version>0.1.0</version>
  <description>Simple simulation interface and template for setting up a hardware interface for ros_control</description>

  <maintainer email="m.klomp@tudelft.nl">Martin Klomp</maintainer>

  <license>Apache-2.0</license>

  <depend>backward_ros</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>mirte_msgs</depend>
  <depend>controller_manager</depend>
  <depend>trajectory_msgs</depend>

  <depend>yaml_cpp_vendor</depend>

  <depend>control_toolbox</depend>

  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>twist_stamper</exec_depend>
  <exec_depend>mirte_master_description</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
